# record-events

./: .env.example  .gitignore  .prettierignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  openapi.json  package-lock.json  package.json  tailwind.config.js  test_auth_flow.rs  test_signed_package.rs  tsconfig.app.json  vite.config.ts
.github/workflows/: backend-ci.yml  frontend-ci.yaml
docs/: ARCHITECTURE.md  DOCUMENTATION.md  FRONTEND_BACKEND_MIGRATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  ONBOARDING_IMPROVEMENTS.md  PROJECT_STRUCTURE_ANALYSIS.md  UI_UX_DESIGN_SPECIFICATION.md  WELCOME_ONBOARDING_IMPROVEMENTS.md  event-server.md  overview.md
eventserver/: Cargo.toml  Dockerfile  README.md
eventserver/src/: error.rs  main.rs  state.rs
eventserver/src/config/: mod.rs  storage.rs
eventserver/src/controllers/: event.rs  health.rs  mod.rs  openapi.rs  relay.rs
eventserver/src/crypto/: certificate.rs  mod.rs  pow.rs
eventserver/src/middleware/: auth.rs  cors.rs  crypto.rs  mod.rs  rate_limit.rs  validation.rs
eventserver/src/services/: event.rs  mod.rs  relay.rs  storage.rs  zip_packager.rs
eventserver/src/types/: api.rs  event.rs  mod.rs  relay.rs
scripts/: generate_self_signed_cert.sh
src/: App.tsx  README.md  main.tsx  test-setup.ts
src/components/: CameraCapture.tsx  Dashboard.tsx  EventForm.tsx  LoadingSpinner.tsx  OnboardingFlow.tsx  WelcomeScreen.test.tsx  WelcomeScreen.tsx
src/crypto/: pow.ts
src/hooks/: useAuthenticationFlow.ts  useEventHistory.ts  useEventSubmission.ts  useInitialization.ts  useKeyManagement.ts  useTheme.ts
src/labels/: label-manager.ts
src/layouts/: MainLayout.tsx
src/locales/en/: translation.json
src/locales/fr/: translation.json
src/openapi-rq/queries/: common.ts  ensureQueryData.ts  prefetch.ts  queries.ts  suspense.ts
src/openapi-rq/requests/: schemas.gen.ts  services.gen.ts  types.gen.ts
src/pages/: DashboardPage.tsx  ErrorPage.tsx  EventFormPage.tsx  LoadingPage.tsx  OnboardingPage.tsx  WelcomePage.tsx  index.ts
src/routes/: AppRoutes.tsx  index.ts
src/services/computation/: proofOfWork.ts
src/services/keyManagement/: apiAuthService.ts  encrypt.ts  jwtService.ts  keyManagement.ts  passwordManager.ts  storageSetup.ts  storeKey.ts
src/utils/: event-packer.ts  projectEnvVariables.ts
