[package]
name = "eventserver"
version = "0.1.0"
edition = "2021"
description = "Stateless EventServer backend for the EventApp ecosystem"
authors = ["EventApp Team"]

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime and HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Cryptography
sha2 = "0.10"
ed25519-dalek = "2.0"
x509-parser = "0.15"
base64 = "0.21"
hex = "0.4"

# Storage (S3)
aws-sdk-s3 = "1.0"
aws-config = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration management
config = "0.13"
dotenvy = "0.15"

# JSON Web Tokens for certificates
jsonwebtoken = "9.0"

# Additional utilities
mime = "0.3"
bytes = "1.0"
zip = "0.6"

[dev-dependencies]
tokio-test = "0.4"